dotnet/aspnet46/vm-webapp/ArmTemplates/windows-vm-template.json
{
	"$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
	"contentVersion": "1.0.0.0",
	"parameters": {
		"vmName": {
			"type": "string",
			"metadata": {
				"description": "Name for the Virtual Machine."
			}
		},
		"vmSize": {
			"type": "string",
			"defaultValue": "Standard_B2s",
			"metadata": {
				"description": "Size for the Virtual Machine."
			}
		},
		"location": {
			"type": "string",
			"defaultValue": "[resourceGroup().location]",
			"metadata": {
				"description": "Location for the Virtual Machine."
			}
		},
		"appInsightsLocation": {
			"type": "string",
			"metadata": {
				"description": "Location of Application Insight."
			}
		},
		"adminUsername": {
			"type": "string",
			"metadata": {
				"description": "Username for the Virtual Machine."
			}
		},
		"adminPassword": {
			"type": "securestring",
			"metadata": {
				"description": "Password for the Virtual Machine."
			}
		},
		"windowsOSVersion": {
			"type": "string",
			"defaultValue": "2016-Datacenter-smalldisk",
			"allowedValues": ["2012-R2-Datacenter",
			"2016-Datacenter",
			"2012-R2-Datacenter-smalldisk",
			"2016-Datacenter-smalldisk"],
			"metadata": {
				"description": "The Windows version for the VM."
			}
		}
	},
	"variables": {
		"storageAccountName": "[concat(uniquestring(resourceGroup().id), 'savm')]",
		"nicName": "[concat(parameters('vmName'), '-NIC')]",
		"addressPrefix": "10.0.0.0/16",
		"subnetName": "mySubnet",
		"subnetPrefix": "10.0.0.0/24",
		"publicIPAddressName": "[concat(parameters('vmName'), '-ip')]",
		"networkSecurityGroupName": "[concat(parameters('vmName'), '-nsg')]",
		"virtualNetworkName": "[concat(parameters('vmName'), '-vnet')]",
		"vnetId": "[resourceId(resourceGroup().name, 'Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]",
		"subnetRef": "[concat(variables('vnetId'), '/subnets/', variables('subnetName'))]",
		"customScriptExtension": "customScriptExtension"
	},
	"resources": [{
		"type": "Microsoft.Storage/storageAccounts",
		"name": "[variables('storageAccountName')]",
		"apiVersion": "2016-01-01",
		"location": "[parameters('location')]",
		"sku": {
			"name": "Standard_LRS"
		},
		"kind": "Storage",
		"properties": {
			
		}
	},
	{
		"apiVersion": "2017-08-01",
		"type": "Microsoft.Network/publicIPAddresses",
		"name": "[variables('publicIPAddressName')]",
		"location": "[parameters('location')]",
		"properties": {
			"publicIPAllocationMethod": "Dynamic",
			"dnsSettings": {
				"domainNameLabel": "[concat(toLower(parameters('vmName')), uniquestring(resourceGroup().id))]"
			}
		}
	},
	{
		"apiVersion": "2017-08-01",
		"type": "Microsoft.Network/virtualNetworks",
		"name": "[variables('virtualNetworkName')]",
		"location": "[parameters('location')]",
		"properties": {
			"addressSpace": {
				"addressPrefixes": ["[variables('addressPrefix')]"]
			},
			"subnets": [{
				"name": "[variables('subnetName')]",
				"properties": {
					"addressPrefix": "[variables('subnetPrefix')]"
				}
			}]
		}
	},
	{
		"apiVersion": "2016-09-01",
		"type": "Microsoft.Network/networkInterfaces",
		"name": "[variables('nicName')]",
		"location": "[parameters('location')]",
		"dependsOn": ["[resourceId('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressName'))]",
		"[resourceId('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]"],
		"properties": {
			"ipConfigurations": [{
				"name": "ipconfig1",
				"properties": {
					"privateIPAllocationMethod": "Dynamic",
					"publicIPAddress": {
						"id": "[resourceId(resourceGroup().name, 'Microsoft.Network/publicIPAddresses',variables('publicIPAddressName'))]"
					},
					"subnet": {
						"id": "[variables('subnetRef')]"
					}
				}
			}],
			"networkSecurityGroup": {
				"id": "[resourceId(resourceGroup().name, 'Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
			}
		}
	},
	{
		"name": "[variables('networkSecurityGroupName')]",
		"type": "Microsoft.Network/networkSecurityGroups",
		"apiVersion": "2017-06-01",
		"location": "[parameters('location')]",
		"properties": {
			"securityRules": [{
				"name": "default-allow-rdp",
				"properties": {
					"description": "Allow RDP",
					"priority": 100,
					"protocol": "TCP",
					"access": "Allow",
					"direction": "Inbound",
					"sourceAddressPrefix": "*",
					"sourcePortRange": "*",
					"destinationAddressPrefix": "*",
					"destinationPortRange": "3389"
				}
			},
			{
				"name": "web_rule",
				"properties": {
					"description": "Allow WEB",
					"protocol": "*",
					"sourcePortRange": "*",
					"destinationPortRange": "80",
					"sourceAddressPrefix": "*",
					"destinationAddressPrefix": "*",
					"access": "Allow",
					"priority": 101,
					"direction": "Inbound"
				}
			}]
		}
	},
	{
		"name": "[parameters('vmName')]",
		"type": "microsoft.insights/components",
		"location": "[parameters('appInsightsLocation')]",
		"apiVersion": "2014-08-01",
		"properties": {
			"ApplicationId": "[parameters('vmName')]",
			"Request_Source": "AzureTfsExtensionAzureProject"
		}
	},
	{
		"apiVersion": "2016-04-30-preview",
		"type": "Microsoft.Compute/virtualMachines",
		"name": "[parameters('vmName')]",
		"location": "[parameters('location')]",
		"dependsOn": ["[resourceId('Microsoft.Storage/storageAccounts/', variables('storageAccountName'))]",
		"[resourceId('Microsoft.Network/networkInterfaces/', variables('nicName'))]"],
		"properties": {
			"hardwareProfile": {
				"vmSize": "[parameters('vmSize')]"
			},
			"osProfile": {
				"computerName": "[parameters('vmName')]",
				"adminUsername": "[parameters('adminUsername')]",
				"adminPassword": "[parameters('adminPassword')]",
				"windowsConfiguration": {
					"provisionVmAgent": "true"
				}
			},
			"storageProfile": {
				"imageReference": {
					"publisher": "MicrosoftWindowsServer",
					"offer": "WindowsServer",
					"sku": "[parameters('windowsOSVersion')]",
					"version": "latest"
				},
				"osDisk": {
					"createOption": "fromImage"
				},
				"dataDisks": []
			},
			"networkProfile": {
				"networkInterfaces": [{
					"id": "[resourceId('Microsoft.Network/networkInterfaces',variables('nicName'))]"
				}]
			},
			"diagnosticsProfile": {
				"bootDiagnostics": {
					"enabled": "true",
					"storageUri": "[reference(resourceId(resourceGroup().name, 'Microsoft.Storage/storageAccounts/', variables('storageAccountName'))).primaryEndpoints['blob']]"
				}
			}
		},
		"resources": [{
			"name": "[concat(parameters('vmName'), '/', variables('customScriptExtension'))]",
			"type": "Microsoft.Compute/virtualMachines/extensions",
			"location": "[parameters('location')]",
			"apiVersion": "2015-06-15",
			"dependsOn": ["[concat('Microsoft.Compute/virtualMachines/', parameters('vmName'))]"],
			"properties": {
				"publisher": "Microsoft.Compute",
				"type": "CustomScriptExtension",
				"typeHandlerVersion": "1.9",
				"autoUpgradeMinorVersion": true,
				"protectedSettings": {
					"commandToExecute": "[concat('powershell.exe setx /m APPINSIGHTS_INSTRUMENTATIONKEY ', reference(resourceId('microsoft.insights/components/', parameters('vmName')), '2015-05-01').InstrumentationKey, '; Import-Module servermanager; Add-WindowsFeature Web-Server, Web-Asp-Net45; Invoke-WebRequest https://download.microsoft.com/download/0/1/D/01DC28EA-638C-4A22-A57B-4CEF97755C6C/WebDeploy_amd64_en-US.msi -outfile $env:temp\\WebDeploy_amd64_en-US.msi; Start-Process $env:temp\\WebDeploy_amd64_en- [...]
				}
			}
		}]
	}]
}
